Input Processing Done, Character Set Remaining

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,14 @@
 /*
 /*/
-
+ !RegexGenerator.cpp
+ !RegexGenerator.h
+ !RegexListGenerator.cpp
+ !RegexListGenerator.h
+ !RegularDefinition.cpp
+ !RegularDefinition.h
+ !RegularExpression.cpp
+ !RegularExpression.h
+ !InputProcessor.cpp
+ !InputProcessor.h
+ !TestMain.cpp
 #to add your file "!file-name"
