--- a/.gitignore
+++ b/.gitignore
@@ -1,21 +1,6 @@
 /*
 /*/
-!RegexGenerator.cpp
-!RegexGenerator.h
-!RegexListGenerator.cpp
-!RegexListGenerator.h
-!RegularDefinition.cpp
-!RegularDefinition.h
-!RegularExpression.cpp
-!RegularExpression.h
-!InputProcessor.cpp
-!InputProcessor.h
-!TestMain.cpp
-!RegexGenerationStrategy.cpp
-!RegexGenerationStrategy.h
+!LexicalAnalyzer
+!Parser
 !a.txt
 #to add your file "!file-name"
-!DFA.h
-!NFA.h
-!DFA_minimization.h
-!testCode.h
