Added epsilon and $

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -31,7 +31,7 @@ add_executable(java_compiler
         LexicalAnalyzer/InputProcessor.h
         main.cpp
         Parser/Facade.cpp
-        Parser/predictiveParsingTableForTheGrammar.cpp
+        #Parser/predictiveParsingTableForTheGrammar.cpp
         Parser/Facade.h
         Parser/FatherOfAllThingsTerminal.cpp
         Parser/FatherOfAllThingsTerminal.h
