first and follow classes + spell checks :))

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -36,4 +36,6 @@ add_executable(java_compiler
         Parser/FatherOfAllThingsTerminal.cpp
         Parser/FatherOfAllThingsTerminal.h
         Parser/InputReader.cpp
-        Parser/InputReader.h)
+        Parser/InputReader.h
+        Parser/FirstFollowFinder.h
+        Parser/FirstFollowFinder.cpp)
